--- a/src/app/widget/widget.component.html
+++ b/src/app/widget/widget.component.html
@@ -1,4 +1,5 @@
 <div class="widget">
+  <div class="widget__fader"></div>
   <div class="row justify-content-between widget__header">
     <div class="col-auto widget__cancel" (click)="askToResetWidgets()">Cancel</div>
     <div class="col-auto widget__title">{{ widgetData.name }}</div>
