--- a/src/assets/styles/_base.scss
+++ b/src/assets/styles/_base.scss
@@ -8,3 +8,8 @@ body {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
 }
+
+.row {
+  margin-right: 0;
+  margin-left: 0;
+}
