--- a/src/app/widget/widget.component.scss
+++ b/src/app/widget/widget.component.scss
@@ -1,6 +1,8 @@
 @import 'variables';
 
 .widget {
+  position: relative;
+
   width: 715px;
   height: 520px;
   background-color: $widget-background-color;
@@ -8,7 +10,7 @@
   box-shadow: 2.5px 4.33px 20px rgba(0, 0, 1, 0.42);
 
   &__header {
-    padding: 15px 20px;
+    padding: 15px 5px;
   }
 
   &__title {
@@ -27,9 +29,19 @@
     color: $widgetCancel-text-color;
     cursor: pointer;
   }
+
+  &__fader {
+    z-index: 2;
+    width: 100%;
+    height: 40px;
+    position: absolute;
+    bottom: 0;
+    border-radius: 10px;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.0), rgba($widget-background-color, 1.0) 100%);
+  }
 }
 
 form {
-  height: 460px;
+  height: 450px;
   overflow: scroll;
 }
